--- a/book.bib
+++ b/book.bib
@@ -517,23 +517,39 @@ pages = {},
 title = {A Unified Approach to Interpreting Model Predictions}
 }
 
+
+
+
+
+
+
+
+
+##########Uzupełnione
+
+
 @online{pylift,
+	author={Robert Yi and Will Frost},
 	title={Pylift package - documentation},
 	url={https://pylift.readthedocs.io/en/latest/},
+	year={2018},
 	urldate={15/04/2020}
 }
 
 
 
-############NOWE
+
 
 
 @online{4groups_chart,
 title={Pylift: A Fast Python Package for Uplift Modeling},
+author={Robert Yi and Will Frost},
 url={https://tech.wayfair.com/data-science/2018/10/pylift-a-fast-python-package-for-uplift-modeling/},
 urldate={15/04/2020}
 }
 
+
+####NOWE
 @article{shap_dependence_plot,
   author    = {Scott M. Lundberg and
                Gabriel G. Erion and
@@ -557,11 +573,13 @@ urldate={15/04/2020}
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-
-
-
-
-
+@online{pyuplift,
+	title={Pyuplift package - documentation},
+	author={Artem Kuchumov},
+	url={https://pyuplift.readthedocs.io/en/latest/index.html},
+	year={2018},
+	urldate={15/04/2020}
+}
 
 
 
